versioned_docs/version-2022.1.3/professor/douglas_barbosa_sousa.mdx
import { Grid } from "@site/src/components/Grid";
const data = {
  title: "Douglas Barbosa Sousa",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Fundamentos de informática - 1076",
          size: 2,
          teachers: [
            "Douglas Barbosa Sousa"
          ],
          classroom: "Laboratório de Informatica A",
          students: "IIW2022A",
          time: "09:25 - 10:15"
        },
        {
          subject: "Informática instrumental e aplicada - 468",
          size: 2,
          teachers: [
            "Douglas Barbosa Sousa"
          ],
          classroom: "Laboratório de Informatica C",
          students: "AGO2022",
          time: "13:10 - 14:00"
        },
        {
          subject: "Projeto Final de Curso - 181",
          size: 2,
          teachers: [
            "Douglas Barbosa Sousa"
          ],
          classroom: "Laboratório de Informatica B",
          students: "IIN2019",
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: []
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: []
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Laboratório de Banco de Dados - 1238",
          size: 2,
          teachers: [
            "Douglas Barbosa Sousa"
          ],
          classroom: "Laboratório de Informatica B",
          students: "IIW2021",
          time: "07:30 - 08:20"
        },
        {
          subject: "Projeto integrador I - 1078",
          size: 2,
          teachers: [
            "Douglas Barbosa Sousa"
          ],
          classroom: "Laboratório de Informatica B",
          students: "IIW2022A",
          time: "09:25 - 10:15"
        },
        {
          subject: "Tópicos Especiais em Tecnologia da Informação - 25",
          size: 2,
          teachers: [
            "Douglas Barbosa Sousa"
          ],
          classroom: "Laboratório de Informatica A",
          students: "TADS2020",
          time: "19:00 - 19:50"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Douglas Barbosa Sousa

<div>
    {
        <Grid
            title={data.title} 
            weekClasses={data.weekClasses} 
            time={data.time}
        />
    }
</div>